crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_setext_underline_opens_blockquote_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..8
  PARAGRAPH@0..8
    TEXT@0..1 "a"
    NEWLINE@1..2 "\n"
    TEXT@2..7 "> ---"
    NEWLINE@7..8 "\n"
