crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_simple_table_closer_before_div_closer.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..35
  FENCED_DIV@0..35
    DIV_FENCE_OPEN@0..9
      TEXT@0..3 ":::"
      WHITESPACE@3..4 " "
      DIV_INFO@4..8
        TEXT@4..8 "note"
      NEWLINE@8..9 "\n"
    SIMPLE_TABLE@9..31
      TABLE_SEPARATOR@9..17
        TABLE_SEP_DASHES@9..12 "---"
        TABLE_SEP_WHITESPACE@12..13 " "
        TABLE_SEP_DASHES@13..16 "---"
        NEWLINE@16..17 "\n"
      TABLE_ROW@17..23
        TABLE_CELL@17..18
          TEXT@17..18 "x"
        WHITESPACE@18..21 "   "
        TABLE_CELL@21..22
          TEXT@21..22 "y"
        NEWLINE@22..23 "\n"
      TABLE_SEPARATOR@23..31
        TABLE_SEP_DASHES@23..26 "---"
        TABLE_SEP_WHITESPACE@26..27 " "
        TABLE_SEP_DASHES@27..30 "---"
        NEWLINE@30..31 "\n"
    DIV_FENCE_CLOSE@31..35
      TEXT@31..34 ":::"
      NEWLINE@34..35 "\n"
