crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_simple_table_in_list_blockquote.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..35
  LIST@0..35
    LIST_ITEM@0..35
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      BLOCK_QUOTE@2..35
        BLOCK_QUOTE_MARKER@2..3 ">"
        WHITESPACE@3..4 " "
        SIMPLE_TABLE@4..35
          TABLE_HEADER@4..11
            WHITESPACE@4..5 " "
            TABLE_CELL@5..6
              TEXT@5..6 "a"
            WHITESPACE@6..9 "   "
            TABLE_CELL@9..10
              TEXT@9..10 "b"
            NEWLINE@10..11 "\n"
          TABLE_SEPARATOR@11..24
            LINE_PREFIX@11..13 "  "
            LINE_PREFIX@13..14 ">"
            LINE_PREFIX@14..15 " "
            TABLE_SEP_WHITESPACE@15..16 " "
            TABLE_SEP_DASHES@16..19 "---"
            TABLE_SEP_WHITESPACE@19..20 " "
            TABLE_SEP_DASHES@20..23 "---"
            NEWLINE@23..24 "\n"
          TABLE_ROW@24..35
            LINE_PREFIX@24..26 "  "
            LINE_PREFIX@26..27 ">"
            LINE_PREFIX@27..28 " "
            WHITESPACE@28..29 " "
            TABLE_CELL@29..30
              TEXT@29..30 "1"
            WHITESPACE@30..33 "   "
            TABLE_CELL@33..34
              TEXT@33..34 "2"
            NEWLINE@34..35 "\n"
