crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_simple_table_in_list_item_stops_at_sibling_marker.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..43
  LIST@0..43
    LIST_ITEM@0..36
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..7
        TEXT@2..6 "item"
        NEWLINE@6..7 "\n"
      BLANK_LINE@7..8
        BLANK_LINE@7..8 "\n"
      PLAIN@8..36
        TEXT@8..16 "  A    B"
        NEWLINE@16..17 "\n"
        LINE_PREFIX@17..19 "  "
        TEXT@19..26 "--- ---"
        NEWLINE@26..27 "\n"
        LINE_PREFIX@27..29 "  "
        TEXT@29..35 "x    y"
        NEWLINE@35..36 "\n"
    LIST_ITEM@36..43
      LIST_MARKER@36..37 "-"
      WHITESPACE@37..38 " "
      PLAIN@38..43
        TEXT@38..42 "next"
        NEWLINE@42..43 "\n"
